<resources>

    <string name="app_name">MiNote</string>
    <string name="no_notes_found_title">No available notes</string>
    <string name="no_notes_found_subtitle">Create a note and it will show up here.</string>
    <string name="no_todo_found_title">No available todo</string>
    <string name="no_todo_found_subtitle">Create a todo and it will show up here.</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="back">back</string>
    <string name="add_password">Add password</string>
    <string name="save">Save</string>
    <string name="write_something">Write Something…</string>
    <string name="delete_note_message">Are you sure want to delete this note?</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="note_updated">Note Updated</string>
    <string name="note_not_saved">Note not saved</string>
    <string name="note_save">Note save</string>
    <string name="all_notes">All notes</string>
    <string name="choose_color">Choose color</string>
    <string name="choose">Choose</string>
    <string name="choose_note_color">Choose note color</string>
    <string name="choose_text_color">Choose text color</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="send_feedback_summary">Need Improvements? Let me know</string>
    <string name="more_from_dev">More from Developer</string>
    <string name="more_from_dev_summary">Support my other apps</string>
    <string name="minote_version">MiNote version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_summary">See privacy policy</string>
    <string name="developed_by">Developed by Adrian Seraspi</string>
    <string name="password">Password</string>
    <string name="note">Note</string>
    <string name="text">Text</string>
    <string name="menu">Menu</string>
    <string name="edit_password">Edit Password</string>
    <string name="change_note_color">Change note color</string>
    <string name="change_text_color">Change text color</string>
    <string name="settings">Settings</string>
    <string name="enter_task">Enter Task</string>
    <string name="listContentDescription">empty list</string>
    <string name="create_note">Create Note</string>
    <string name="note_pad">Note Pad</string>
    <string name="todo_list">Todo List</string>
    <string name="create">CREATE</string>
    <string name="todo">ToDo</string>
    <string name="notes">Notes</string>
    <string name="note_color">Note color</string>
    <string name="text_color">Text color</string>
    <string name="lock">Lock</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="verify_passcode">Verify Passcode</string>
    <string name="wrong_passcode">Wrong Passcode. Please try again.</string>
    <string name="clear">Clear</string>
    <string name="locked">Locked</string>
</resources>
