<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="General">
        
        <Preference
            android:key="default_note_color"
            android:title="Change Default Note Color"
            android:summary="Set a default color for your note"
            android:defaultValue="#ef5350"/>
        
        <Preference
            android:key="default_text_color"
            android:title="Change Default Text Color"
            android:summary="Set a default color for your text"
            android:defaultValue="#000000"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="About">
    
        <Preference
            android:key="send_feedback"
            android:title="@string/send_feedback"
            android:summary="@string/send_feedback_summary" />
    
        <Preference
            android:key="more_from_dev"
            android:title="@string/more_from_dev"
            android:summary="@string/more_from_dev_summary" />
    
        <Preference
            android:key="app_version"
            android:title="@string/minote_version" />
    
        <Preference
            android:title="@string/developed_by"/>
        
    </PreferenceCategory>
    
</PreferenceScreen>