<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditorActivity">

    <RelativeLayout
        android:id="@+id/editor_nav_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/editor_back_arrow"
            style="@style/ImageButton.Selectable"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/back" />

        <EditText
            android:id="@+id/editor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:layout_toEndOf="@id/editor_back_arrow"
            android:layout_toStartOf="@id/editor_password"
            android:hint="@string/title"
            android:padding="@dimen/margin_medium"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/editor_password"
            style="@style/ImageButton.Selectable"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/lock_close"
            android:contentDescription="@string/add_password"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_toStartOf="@id/editor_save"/>

        <ImageButton
            android:id="@+id/editor_save"
            style="@style/ImageButton.Selectable"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/save"
            app:srcCompat="@drawable/save" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editor_nav_layout">

        <LinearLayout
            android:id="@+id/editor_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editor_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:hint="@string/write_something"
                android:background="@android:color/transparent" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>