<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_todo_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editor.todo.EditorTodoFragment">

    <RelativeLayout
        android:id="@+id/editor_todo_nav_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/editor_todo_back_arrow"
            style="@style/ImageButton.Selectable"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_small"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/back" />

        <EditText
            android:id="@+id/editor_todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_toStartOf="@id/editor_todo_save"
            android:layout_toEndOf="@id/editor_todo_back_arrow"
            android:autoLink=""
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/title"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small" />

        <ImageButton
            android:id="@+id/editor_todo_save"
            style="@style/ImageButton.Selectable"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_toStartOf="@id/editor_todo_menu"
            android:contentDescription="@string/save"
            app:srcCompat="@drawable/save" />

        <ImageButton
            android:id="@+id/editor_todo_menu"
            style="@style/ImageButton.Selectable"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_small"
            android:contentDescription="@string/menu"
            app:srcCompat="@drawable/menu" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/editor_todo_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editor_todo_nav_layout" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editor_todo_task_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/editor_todo_add_task"
            android:autofillHints=""
            android:hint="@string/enter_task"
            android:inputType="text|textMultiLine"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/editor_todo_add_task"
            style="@style/ImageButton.Selectable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/add_sub_todo_button"
            app:srcCompat="@drawable/add" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>