<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.list.ListActivity">

    <TextView
        android:id="@+id/list_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/proxima_nova_bold"
        android:textColor="@color/textColor"
        android:textSize="@dimen/headerSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/notes" />

    <FrameLayout
        android:id="@+id/list_delete_container"
        android:layout_width="@dimen/constraint_layout_match_parent"
        android:layout_height="60dp"
        android:background="@color/redColor"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/delete_note"
            app:srcCompat="@drawable/ic_delete" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_notes"
        android:layout_width="@dimen/constraint_layout_match_parent"
        android:layout_height="@dimen/constraint_layout_match_parent"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_tv_title" />

    <LinearLayout
        android:id="@+id/list_empty_placeholder"
        android:layout_width="@dimen/constraint_layout_match_parent"
        android:layout_height="@dimen/constraint_layout_match_parent"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_tv_title">

        <ImageView
            android:id="@+id/list_iv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/listContentDescription"
            tools:src="@drawable/ic_empty_notes" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/list_tv_empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="@dimen/placeholderTitleSize"
            tools:text="@string/no_notes_found_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/list_tv_empty_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_very_small"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/placeholderSubtitleSize"
            tools:text="@string/no_notes_found_subtitle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>