<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bsd_edit_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_height"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/lock_close"
            android:tint="@color/gray_deep"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_password"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/bsd_change_note_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_height"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/change_note_color"
            android:tint="@color/gray_deep"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_note_color"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/bsd_change_text_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_height"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/change_text_color"
            android:tint="@color/gray_deep"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_text_color"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />
    
    </LinearLayout>
    
</LinearLayout>